[package]
name = "http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
rate-limiter = { path = "../rate-limiter" }
http-body-util = { version = "0.1.3", features = ["full"] }
http = "1.4.0"
httparse = "1.10.1"
clap = { version = "4.6.1", features = ["derive"] }
